# HdmapEngine

./: .gitignore  CMakeLists.txt  README.md
include/: HdmapEngine.h
include/element/: Connection.h  Crosswalk.h  Junction.h  Lane.h  LaneSection.h  Point.h  Road.h  StopLine.h  TrafficLight.h
include/tools/: KDTree.h  TransformUtil.h
mapdata/: .~接口定义.xlsx  FourWaySignal.xml  接口定义.xlsx
showMap/: show.py  show3d.py  showPloygon.py  test4.txt  test5.txt  test6.txt
src/: HdmapEngine.cpp  OutputPoint.cpp  main.cpp
src/HdMapEngine/: HdmapEngine.cpp
src/element/: Connection.cpp  Junction.cpp  Lane.cpp  LaneSection.cpp  Point.cpp  Road.cpp
src/tinyxml/: tinyxml2.cpp
src/tools/: KD-tree.cpp  TransformUtil.cpp
